--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "limits": "c",
-        "unistd.h": "c"
+        "unistd.h": "c",
+        "typeinfo": "cpp"
     }
 }
